--- a/dos33.html
+++ b/dos33.html
@@ -11,16 +11,167 @@
 
 Pages left:
 
-     10  20  30  40  50  60  70  80  90 100 110 120 130 140 150
-  1  11  21  31  41  51  61  71  81  91 101 111 121 131 141 151
-  2  12  22  32  42  52  62  72  82  92 102 112 122 132 142 152
-  3  13  23  33  43  53  63  73  83  93 103 113 123 133 143 153
-  4  14  24  34  44  54  64  74  84  94 104 114 124 134 144 154
-  5  15  25  35  45  55  65  75  85  95 105 115 125 135 145 n/a
-  6  16  26  36  46  56  66  76  86  96 106 116 126 136 146 n/a
-  7  17  27  37  47  57  67  77  87  97 107 117 127 137 147 n/a
-  8  18  28  38  48  58  68  78  88  98 108 118 128 138 148 n/a
-  9  19  29  39  49  59  69  79  ==  99 109 119 129 139 149 n/a
+        1st pass = Text
+          2nd pass = hyperlinks
+            3rd pass = address & opcodes
+              4th pass = Annotation
+      0 n/a
+      1 - - - -
+      2 - - - -
+      3 - - - -
+      4 - - - -
+      5 - - - -
+      6 - - - -
+      7 - - - -
+      8 - - - -
+      9 - - - -
+     10 - - - -
+     11 - - - -
+     12 - - - -
+     13 - - - -
+     14 - - - -
+     15 - - - -
+     16 - - - -
+     17 - - - -
+     18 - - - -
+     19 - - - -
+     20 - - - -
+     21 - - - -
+     22 - - - -
+     23 - - - -
+     24 - - - -
+     25 - - - -
+     26 - - - -
+     27 - - - -
+     28 - - - -
+     29 - - - -
+     30 - - - -
+     31 - - - -
+     32 - - - -
+     33 - - - -
+     34 - - - -
+     35 - - - -
+     36 - - - -
+     37 - - - -
+     38 - - - -
+     39 - - - -
+     40 - - - -
+     41 - - - -
+     42 - - - -
+     43 - - - -
+     44 - - - -
+     45 - - - -
+     46 - - - -
+     47 - - - -
+     48 - - - -
+     49 - - - -
+     50 - - - -
+     51 - - - -
+     52 - - - -
+     53 - - - -
+     54 - - - -
+     55 - - - -
+     56 - - - -
+     57 - - - -
+     58 - - - -
+     59 - - - -
+     60 - - - -
+     61 - - - -
+     62 - - - -
+     63 - - - -
+     64 - - - -
+     65 - - - -
+     66 - - - -
+     67 - - - -
+     68 - - - -
+     69 - - - -
+     70 - - - -
+     71 - - - -
+     72 - - - -
+     73 - - - -
+     74 - - - -
+     75 - - - -
+     76 - - - -
+     77 - - - -
+     78 - - - -
+     79 - - - -
+     80 - - - -
+     81 - - - -
+     82 - - - -
+     83 - - - -
+     84 - - - -
+     85 - - - -
+     86 - - - -
+     87 - - - -
+     88 - - - -
+     89 - - - -
+     90 - - - -
+     91 - - - -
+     92 - - - -
+     93 - - - -
+     94 - - - -
+     95 - - - -
+     96 - - - -
+     97 - - - -
+     98 - - - -
+     99 - - - -
+    100 - - - -
+    101 - - - -
+    102 - - - -
+    103 - - - -
+    104 - - - -
+    105 - - - -
+    106 - - - -
+    107 - - - -
+    108 - - - -
+    109 - - - -
+    110 - - - -
+    111 - - - -
+    112 - - - -
+    113 - - - -
+    114 - - - -
+    115 - - - -
+    116 - - - -
+    117 - - - -
+    118 - - - -
+    119 - - - -
+    120 - - - -
+    121 - - - -
+    122 - - - -
+    123 - - - -
+    124 - - - -
+    125 - - - -
+    126 - - - -
+    127 - - - -
+    128 - - - -
+    129 - - - -
+    130 - - - -
+    131 - - - -
+    132 - - - -
+    133 - - - -
+    134 - - - -
+    135 - - - -
+    136 - - - -
+    137 - - - -
+    138 - - - -
+    139 - - - -
+    140 - - - -
+    141 - - - -
+    142 - - - -
+    143 - - - -
+    144 - - - -
+    145 - - - -
+    146 - - - -
+    147 - - - -
+    148 - - - -
+    149 - - - -
+    150 - - - -
+    151 - - - -
+    152 - - - -
+    153 - - - -
+    154 - - - -
+        1st 3rd
+          2nd 4th
 
 -->
 <html>
